# rust-actix-web-server-node-client-boilerplate

./: .gitignore  Cargo.toml  Procfile  build.rs  dev  package.json  setup-heroku  setup-local-dev
src/: client.rs  main.rs
