[package]
name = "rust-actix-web-server-node-client-boilerplate"
version = "0.1.0"
authors = ["Kai <thiskaiguy@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2"
actix-web-static-files = "2.0"

[build-dependencies]
actix-web-static-files = "2.0"
